--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
     "@reduxjs/toolkit": "^1.9.0",
+    "bootstrap": "^5.2.3",
     "eslint-config-airbnb": "^19.0.4",
     "expo": "~47.0.3",
     "expo-status-bar": "~1.4.2",
