--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
+    "@react-navigation/native": "^6.0.16",
+    "@react-navigation/native-stack": "^6.9.4",
     "@reduxjs/toolkit": "^1.9.0",
     "eslint-config-airbnb": "^19.0.4",
     "expo": "~47.0.3",
@@ -19,6 +21,8 @@
     "react-dom": "18.1.0",
     "react-google-button": "^0.7.2",
     "react-native": "0.70.5",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
     "react-native-web": "~0.18.9",
     "react-redux": "^8.0.5"
   },
