--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-google-button": "^0.7.2",
+    "react-hook-form": "^7.39.7",
     "react-native": "0.70.5",
     "react-native-web": "~0.18.9",
     "react-redux": "^8.0.5"
