--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.1.0",
     "react-google-button": "^0.7.2",
     "react-native": "0.70.5",
+    "react-native-paper": "^5.0.0-rc.10",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-web": "~0.18.9",
