--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-google-button": "^0.7.2",
     "react-hook-form": "^7.39.7",
     "react-native": "0.70.5",
+    "react-native-google-button": "^0.1.0",
+    "react-native-google-signin": "^2.1.1",
     "react-native-paper": "^5.0.0-rc.10",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
