--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-paper": "^5.0.0-rc.10",
     "react-native-screens": "^3.18.2",
     "react-native-sweet-alert": "^3.5.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
     "react-redux": "^8.0.5"
   },
