--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo": "~47.0.3",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.14.0",
+    "material-design-icons": "^3.0.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-google-button": "^0.7.2",
