--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^1.9.0",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
+    "browserify": "^17.0.0",
     "eslint-config-airbnb": "^19.0.4",
     "expo": "~47.0.3",
     "expo-status-bar": "~1.4.2",
